--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app" class="h-100"></div>
-    <footer class="footer mt-auto py-3 bg-light">
-      <div class="container">
-      </div>
-    </footer>
+    <div class="container py-3">
+      <div id="app" class="h-100"></div>
+      <footer class="footer mt-auto py-3 bg-light">
+        <div class="container">
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
