--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,12 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body class="d-flex flex-column h-100">
+  <body class="d-flex flex-column">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div class="container py-3">
       <div id="app" class="h-100"></div>
-      <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-        </div>
-      </footer>
     </div>
   </body>
 </html>
